--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -12,18 +12,20 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     min-height: 100vh;
-    // position: relative;
 }
 
 body {
     font-size: 1.6rem;
     font-family: v.$fuente-principal;
     background-color: v.$grisOscuro;
+
+    &.no-scroll {
+        overflow: hidden;
+    } 
 }
 
 main {
-    margin-top: 10rem;
-    // margin-bottom: 30rem;
+    min-height: 100vh;
 }
 
 h1 {
@@ -46,7 +48,7 @@ h1,
 h2,
 h3,
 h4 {
-    margin: 0 0 4rem 0;
+    margin: 4rem 0 0 0;
     color: v.$blanco;
 }
 
@@ -59,6 +61,7 @@ a,
 li {
     font-size: 2rem;
     color: v.$blanco;
+    line-height: 1.6;
 }
 
 ul {
@@ -86,4 +89,10 @@ input,
 legend,
 label {
     display: block;
+}
+
+blockquote {
+    color: v.$blanco;
+    font-size: 1.8rem;
+    margin: 2rem 0 0 2rem;
 }
