--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -64,3 +64,18 @@
     font-size: 2.6rem;
     font-weight: 900;
 }
+
+.encabezado {
+    min-height: 10rem;
+    width: 100%;
+}
+
+.display-none {
+    display: none;
+}
+.display-flex {
+    display: flex;
+}
+.display-block {
+    display: block;
+}
