--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -30,49 +30,39 @@
     }
 
     .menu {
-        width: 4rem;
-        height: 4rem;
-        padding: .5rem;
-        background-color: v.$gris;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-        
         @include m.tablet{
             display: none;
         }
-        
-        &:hover {
-            cursor: pointer;
-            background-color: darken($color: v.$gris, $amount: 10%);
+    }
 
-            &::before {
-                background-color: darken($color: v.$blanco, $amount: 10%);
-                box-shadow: 0px 1.25rem 0px 0px darken($color: v.$blanco, $amount: 10%);
+    @media(max-width: 768px){
+        &.header-fijo {
+            z-index: 10;
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba($color: v.$negro, $alpha: .4);
+
+            .logo {
+                display: none;
             }
-
-            &::after {
-                background-color: darken($color: v.$blanco, $amount: 10%);
+            
+            .menu {
+                position: absolute;
+                top: 3rem;
+                right: 3rem;
             }
-        }
-
-        &::before {
-            content: "";
-            display: block;
-            width: 100%;
-            height: .5rem;
-            margin: 0 auto;
-            background-color: v.$blanco;
-            box-shadow: 0px 1.25rem 0px 0px v.$blanco;
-        }
-
-        &::after {
-            content: "";
-            display: block;
-            width: 100%;
-            height: .5rem;
-            margin: 0 auto;
-            background-color: v.$blanco;
+            
+            .navegacion {
+                opacity: 1;
+                visibility: visible;
+                width: 100vh;
+                height: 100vw;
+                align-items: center;
+                justify-content: center;
+            }
         }
     }
 }
