--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,3 +1,13 @@
 @forward 'test';
 @forward 'categorias';
 @forward 'formularioTest';
+@forward 'modal';
+@forward 'acciones';
+@forward 'formularioCrudSala';
+@forward 'formularioModal';
+@forward 'sala';
+@forward 'salaEdu';
+@forward 'salas';
+@forward 'inicioSalas';
+@forward 'inicioCategorias';
+@forward 'inicioTests';
