--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -1,5 +1,6 @@
-@forward 'formularios';
+@forward 'contenido';
+@forward 'sidebar';
 @forward 'header';
 @forward 'footer';
-@forward 'sidebar';
-@forward 'ventanasFlotantes';
+@forward 'formularios';
+@forward 'contenidoPrincipal';
