--- a/src/scss/base/_menus.scss
+++ b/src/scss/base/_menus.scss
@@ -67,3 +67,53 @@
     }
 
 }
+
+.tres-puntos {
+    width: 1.5rem;
+    height: 4rem;
+    padding: .5rem;
+    border-radius: .5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    transition: .3s all ease;
+    
+    &:hover {
+        cursor: pointer;
+        background-color: darken($color: v.$gris, $amount: 10%);
+
+        &::before {
+            background-color: darken($color: v.$blanco, $amount: 10%);
+            box-shadow: 0px 1.25rem 0px 0px darken($color: v.$blanco, $amount: 10%);
+        }
+
+        &::after {
+            background-color: darken($color: v.$blanco, $amount: 10%);
+        }
+    }
+
+    &::before {
+        content: "";
+        display: block;
+        transition: .6s all ease;
+        width: 100%;
+        height: .5rem;
+        border-radius: .25rem;
+        margin: 0 auto;
+        background-color: v.$blanco;
+        box-shadow: 0px 1.25rem 0px 0px v.$blanco;
+        transform: rotate(0) translateX(0) translateY(0);
+    }
+
+    &::after {
+        content: "";
+        display: block;
+        transition: .6s all ease;
+        width: 100%;
+        height: .5rem;
+        border-radius: .25rem;
+        margin: 0 auto;
+        background-color: v.$blanco;
+        transform: rotate(0) translateX(0) translateY(0);
+    }
+}
