--- a/src/scss/base/_utilidades.scss
+++ b/src/scss/base/_utilidades.scss
@@ -7,13 +7,19 @@
     margin: 0 auto;
 }
 
+.contenedor-sm {
+    max-width: 60rem;
+    width: 95%;
+    margin: 0 auto;
+}
+
 .seccion {
     margin-top: 5rem;
     margin-bottom: 5rem;
 }
 
 .contenido-centrado {
-    max-width: 80rem;
+    max-width: 90rem;
     width: 95%;
     margin: 0 auto;
 }
@@ -23,6 +29,7 @@
     font-weight: 900;
     text-align: center;
     margin-top: 4rem;
+    margin-bottom: 4rem;
 }
 
 .descripcion-pagina {
@@ -49,8 +56,9 @@
         }
     }
 
-    @include m.tablet {
+    @include m.desktop {
         flex-direction: row;
+        align-items: center;
         gap: 3rem;
         width: auto;
 
@@ -73,9 +81,11 @@
 .display-none {
     display: none;
 }
+
 .display-flex {
     display: flex;
 }
+
 .display-block {
     display: block;
 }
