--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -11,7 +11,7 @@
         gap: 3rem;
         align-items: center;
         
-        @include m.tablet{
+        @include m.desktop{
             flex-direction: row;
             gap: 0;
             justify-content: space-between;
