--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -21,7 +21,7 @@
         width: 0;
         height: 0;
 
-        @include m.tablet{
+        @include m.desktop{
             opacity: 1;   
             visibility: visible;
             width: auto;
@@ -30,12 +30,12 @@
     }
 
     .menu {
-        @include m.tablet{
+        @include m.desktop{
             display: none;
         }
     }
 
-    @media(max-width: 768px){
+    @media(max-width: 992px){
         &.header-fijo {
             z-index: 10;
             position: fixed;
@@ -62,6 +62,42 @@
                 height: 100vw;
                 align-items: center;
                 justify-content: center;
+            }
+        }
+    }
+}
+
+
+.perfil-mini {
+    @include m.tablet{
+        position: relative;
+        background-color: v.$grisOscuro;
+        border-radius: 50%;
+
+        .imagen-perfil {
+            width: 6rem;
+            height: 6rem;
+
+            img{
+                border-radius: 50%;
+            }
+        }
+
+        .cerrar-sesion {
+            display: none;
+        }
+
+        &:hover {
+            border-bottom-left-radius: 0;
+            border-bottom-right-radius: 0;
+
+            .cerrar-sesion {
+                background-color: v.$grisOscuro;
+                display: block;
+                position: absolute;
+                font-size: 1.4rem;
+                border-bottom-left-radius: .5rem;
+                border-bottom-right-radius: .5rem;
             }
         }
     }
