--- a/src/scss/layout/_sidebar.scss
+++ b/src/scss/layout/_sidebar.scss
@@ -1,102 +1,100 @@
 @use 'base/mixins' as m;
 @use 'base/variables' as v;
 
-.contenido {
-    margin-top: 0;
-    display: grid;
-    transition: all .6s ease;
+.sidebar {
+    padding: 3rem 2rem;
 
-    @include m.tablet{
+    .autor {
+        display: grid;
         grid-template-columns: 1fr 2fr;
+        column-gap: 2rem;
+        background-color: v.$azulRey;
+        padding: 1rem;
+        border-radius: .5rem;
 
-        &.contenido-completo {
-            grid-template-columns: 100%;
+        img {
+            grid-row: 1/3;
+        }
+
+        .nombre,
+        .usuario {
+            grid-column: 2/3;
+            display: grid;
+            place-content: center;
+        }
+    }
+
+    .favorito {
+        margin: 4rem 2rem;
+        width: 2rem;
+        height: 2rem;
+        transform: rotate(45deg);
+        position: relative;
+        cursor: pointer;
+
+        &::before,
+        &::after {
+            content: "";
+            position: absolute;
+            width: 2rem;
+            height: 2rem;
+            border-radius: 50%;
+        }
+
+        &::before {
+            left: -1rem;
+            top: 0;
+        }
+
+        &::after {
+            top: -1rem;
+        }
+
+        &.activo {
+            background-color: v.$rojo;
             
-            .contenido-principal {
-                padding-left: 8rem;
-                grid-column: 1/2;
+            &::after,
+            &::before {
+                background-color: v.$rojo;
+            }
+
+            &:hover {
+                background-color: darken($color: v.$rojo, $amount: 10%);
+    
+                &::after,
+                &::before {
+                    background-color: darken($color: v.$rojo, $amount: 10%);
+                }
+            }
+        }
+        
+        &.inactivo {
+            background-color: v.$grisClaro;
+
+            &::after,
+            &::before {
+                background-color: v.$grisClaro;
+            }
+
+            &:hover {
+                background-color: darken($color: v.$grisClaro, $amount: 10%);
+
+                &::after,
+                &::before {
+                    background-color: darken($color: v.$grisClaro, $amount: 10%);
+                }
             }
         }
     }
 
-    .contenido-principal {
-        width: 95%;
-        margin: 0 auto;
-
-        @include m.tablet{
-            grid-column: 2/3;
-        }
-    }
-}
-
-.sidebar {
-    width: 95%;
-    margin: 0 auto;
-    border-bottom: 2px solid v.$blanco;
-    background-color: darken($color: v.$grisOscuro, $amount: 10%);
-    padding: 2rem;
-    transition: all 300ms ease;
-    
-    @include m.tablet {
-        position: fixed;
-        top: 10rem;
-        left: 1rem;
-        bottom: 0;
-        width: 30%;
-        height: 80vh;
-        border-radius: 1rem;
-        overflow: auto;
-        border-bottom: none;
-        padding-right: 2rem;
-        border-right: 2px solid v.$blanco;
-    }
-
-    &.sidebar-oculto {
-
-        @include m.tablet {
-            width: auto;
-            height: min-content;
-        }
-
-        .aside-visible {
-            display: none;
-        }
-    }
-    
-    .aside-visible {
-        margin: 2rem auto;
-        width: auto;
-        height: auto;
-        opacity: 1;
-        visibility: visible;
-
-        .opciones-aside {
-            display: grid;
-            gap: 2rem;
-        }
-    }
-}
-
-
-.usuario-perfil {
-    display: grid;
-    background-color: v.$grisOscuro;
-    grid-template-columns: 1fr 2fr;
-    gap: 2rem;
-    padding: 1rem;
-    margin: 3rem 0;
-
-    img {
+    .opciones {
         display: grid;
-        place-content: center;
-        border-radius: 50%;
-        max-width: 20rem;
-        max-height: 20rem;
-        background-color: v.$grisClaro;
-    }
+        gap: 2rem;
+        margin-top: 3rem;
 
-    span {
-        display: grid;
-        place-content: center;
+        button {
+            padding: 1rem;
+            font-size: 1.3rem;
+        }
     }
 }
