--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -5,10 +5,19 @@ $blanco: rgb(255 255 255);
 $grisOscuro: rgb(41, 41, 41);
 $gris: rgb(124, 124, 124);
 $grisClaro: rgb(213, 213, 213);
-$verde: rgb(23, 200, 97);
+
+$primario: rgb(0, 77, 87);
+$secundario: rgb(31, 107, 107);
+$terciario: rgb(20, 171, 171);
+$cuarto: #dfeeee;
+$quinto: #1dbebe;
+$sexto: #00a82d;
+$claro: rgb(228, 255, 255);
+
+$verde: rgb(18, 175, 84);
 $verdeClaro: rgb(40, 235, 131);
 $rojo: rgb(247, 44, 44);
-$rojoClaro: rgb(251, 98, 98);
+$rojoClaro: rgb(245, 129, 129);
 $naranja: rgb(245, 144, 50);
 $azulClaro: rgb(42, 193, 213);
 $azul: rgb(37, 108, 222);
