--- a/src/scss/components/_index.scss
+++ b/src/scss/components/_index.scss
@@ -1,13 +1,14 @@
-@forward 'test';
-@forward 'categorias';
-@forward 'formularioTest';
 @forward 'modal';
-@forward 'acciones';
-@forward 'formularioCrudSala';
 @forward 'formularioModal';
-@forward 'sala';
-@forward 'salaEdu';
-@forward 'salas';
+@forward 'inicioTests';
 @forward 'inicioSalas';
 @forward 'inicioCategorias';
-@forward 'inicioTests';
+@forward 'test';
+@forward 'tests';
+@forward 'testEdu';
+@forward 'formularioTest';
+@forward 'sala';
+@forward 'salas';
+@forward 'salaEdu';
+@forward 'formularioCrudSala';
+@forward 'categorias';
