--- a/src/scss/layout/_contenido.scss
+++ b/src/scss/layout/_contenido.scss
@@ -2,32 +2,10 @@
 @use 'base/variables' as v;
 
 .contenido {
-    margin-top: 14rem;
-
     @include m.tablet{
         margin-top: 0;
         display: flex;
         height: 100vh;
-        
-        .sidebar {
-            flex: 0 0 30rem;
-
-            @include m.desktop{
-                flex: 0 0 40rem;
-            }
-        }
-    
-        .contenido-principal {
-            flex: 1;
-            overflow: auto;
-            
-            .header {
-                left: 30rem;
-                @include m.desktop{
-                    left: 40rem;
-                }
-            }
-        }
     }
 
     .contenido-principal {
@@ -37,12 +15,31 @@
             padding-top: 0;
         }
     }
+}
 
-    .encabezado {
-        min-height: 0;
+.sidebar {
+    @include m.tablet{
+        flex: 0 0 30rem;
+    }
 
+    @include m.desktop{
+        flex: 0 0 40rem;
+    }
+}
+
+.contenido-principal {
+    @include m.tablet{
+        flex: 1;
+        overflow: auto;
+    }
+    
+    .header {
         @include m.tablet{
-            min-height: 10rem;
+            left: 30rem;    
+        }
+
+        @include m.desktop{
+            left: 40rem;
         }
     }
 }
