--- a/src/scss/layout/_index.scss
+++ b/src/scss/layout/_index.scss
@@ -3,4 +3,6 @@
 @forward 'header';
 @forward 'footer';
 @forward 'formularios';
-@forward 'contenidoPrincipal';
+@forward 'favorito';
+@forward 'acciones';
+@forward 'autor';
