--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -12,16 +12,17 @@ html {
     box-sizing: border-box;
     font-size: 62.5%;
     min-height: 100vh;
+    position: relative;
 }
 
 body {
     font-size: 1.6rem;
     font-family: v.$fuente-principal;
-    background-color: v.$grisOscuro;
+    background-color: v.$claro;
 
     &.no-scroll {
         overflow: hidden;
-    } 
+    }
 }
 
 main {
