--- a/src/scss/components/_inicioSalas.scss
+++ b/src/scss/components/_inicioSalas.scss
@@ -9,20 +9,40 @@
 
     .sala {
         font-weight: 700;
-        background-color: v.$grisOscuro;
+        background-color: v.$blanco;
+        box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.15);
         padding: 1rem;
         display: flex;
         gap: 1rem;
+        border-radius: 1rem;
         flex-direction: column;
 
-        @include m.desktop{
+        @include m.telefono{
             flex-direction: row;
             justify-content: space-between;
             align-items: center;
         }
+
+        .nombre {
+            font-size: 2.2rem;
+        }
         
-        p{
-            margin: 0;
+        .nombre,
+        .autor-sala {
+            color: v.$negro;
+        }
+
+        .autor-sala {
+            font-size: 1.3rem;
+            display: flex;
+            align-items: center;
+            gap: .5rem;
+
+            img {
+                width: 4rem;
+                height: 4rem;
+                border-radius: 50%;
+            }
         }
     }
 }
