--- a/src/scss/layout/_acciones.scss
+++ b/src/scss/layout/_acciones.scss
@@ -1,21 +1,26 @@
 @use 'base/mixins' as m;
 @use 'base/variables' as v;
 
-.acciones {
+.sidebar .acciones {
     margin-top: 3rem;
-    display: grid;
+    display: none;
     gap: 1rem;
+    
+    @include m.tablet{
+        display: grid;
+    }
 
     a {
         display: block;
-        font-size: 1.4rem;
+        font-size: 1.8rem;
         font-weight: 700;
         padding: .5rem;
         transition: 300ms background-color ease;
         border-radius: .5rem;
+        color: v.$blanco;
 
         &:hover {
-            background-color: v.$gris;
+            background-color: v.$secundario;
         }
     }
 }
