--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -2,7 +2,10 @@
 @use 'base/variables' as v;
 
 .footer {
-    background-color: v.$gris;
+    background-color: v.$primario;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 
     .contenedor {
         padding: 5rem 0 4rem 0;
@@ -15,6 +18,10 @@
             flex-direction: row;
             gap: 0;
             justify-content: space-between;
+        }
+
+        .logo {
+            color: v.$blanco;
         }
     }
 
