--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -6,62 +6,44 @@
     top: 0;
     left: 0;
     right: 0;
-    padding: 3rem 0 2rem 0;
-    background: linear-gradient(to top, transparent, v.$grisOscuro);
+    padding: 1.5rem 0 .75rem 0;
+    background-color: v.$blanco;
+    border-bottom: .5rem v.$quinto solid;
 
     .contenedor{
         display: flex;
         justify-content: space-between;
         align-items: center;
-    }
 
-    .navegacion{
-        opacity: 0;
-        visibility: hidden;
-        width: 0;
-        height: 0;
-
-        @include m.desktop{
-            opacity: 1;   
-            visibility: visible;
-            width: auto;
-            height: auto;
-        }
-    }
-
-    .menu {
-        @include m.desktop{
-            display: none;
-        }
-    }
-
-    @media(max-width: 992px){
-        &.header-fijo {
-            z-index: 10;
-            position: fixed;
-            top: 0;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            background-color: rgba($color: v.$negro, $alpha: .4);
-
-            .logo {
-                display: none;
-            }
-            
-            .menu {
-                position: absolute;
-                top: 3rem;
-                right: 3rem;
-            }
-            
-            .navegacion {
-                opacity: 1;
+        .navegacion{
+            opacity: 0;
+            visibility: hidden;
+            width: 0;
+            height: 0;
+    
+            @include m.desktop{
+                opacity: 1;   
                 visibility: visible;
-                width: 100vh;
-                height: 100vw;
-                align-items: center;
-                justify-content: center;
+                width: auto;
+                height: auto;
+            }
+
+            a {
+                color: v.$secundario;
+
+                &:hover {
+                    color: darken($color: v.$secundario, $amount: 20%);
+                }
+
+                &.cerrar-sesion {
+                    color: v.$blanco;
+                }
+            }
+        }
+    
+        .menu {
+            @include m.desktop{
+                display: none;
             }
         }
     }
@@ -71,7 +53,7 @@
 .perfil-mini {
     @include m.tablet{
         position: relative;
-        background-color: v.$grisOscuro;
+        background-color: v.$primario;
         border-radius: 50%;
 
         .imagen-perfil {
@@ -92,13 +74,50 @@
             border-bottom-right-radius: 0;
 
             .cerrar-sesion {
-                background-color: v.$grisOscuro;
+                background-color: v.$primario;
                 display: block;
                 position: absolute;
                 font-size: 1.4rem;
                 border-bottom-left-radius: .5rem;
                 border-bottom-right-radius: .5rem;
             }
+        }
+    }
+}
+
+.logo {
+    color: v.$primario;
+    font-size: 3rem;
+    font-weight: 700;
+
+    @include m.tablet{
+        font-size: 3.6rem;
+    }
+}
+
+.navegacion {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    a {
+        padding: 1rem;
+        display: block;
+        text-align: center;
+        
+        &:hover {
+            color: v.$cuarto;
+        }
+    }
+
+    @include m.desktop {
+        flex-direction: row;
+        align-items: center;
+        gap: 3rem;
+        width: auto;
+
+        a {
+            padding: 0;
         }
     }
 }
